tests/ui/foreign_missing_path.stderr
error: unexpected end of input, expected identifier
 --> tests/ui/foreign_missing_path.rs:5:1
  |
5 | #[dyn_shim_foreign]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `dyn_shim_foreign` (in Nightly builds, run with -Z macro-backtrace for more info)
